Application_Controller_Test is now Application_Controller_Index. Added default route parameters to Solidocs_Router

--- a/System/Application/Config/Routes.ini
+++ b/System/Application/Config/Routes.ini
@@ -1,9 +1,9 @@
 [index]
 uri = /
-controller = test
+controller = index
 action = index
 
 [about]
 uri = /about
-controller = test
+controller = index
 action = about
