Layed ground for Solidcms. Fixed model slug in Solidocs_Load::model()

--- a/System/Application/Config/Routes.ini
+++ b/System/Application/Config/Routes.ini
@@ -7,3 +7,9 @@ action = index
 uri = /about
 controller = index
 action = about
+
+[solidcms]
+uri = /*
+package = solidcms
+controller = index
+action = index
