Application is now first priority in Solidocs_Load::search(). Added Solidocs_Model_User, the foundation for a user model. Added Solidcms_Controller_Admin.

--- a/System/Application/Config/Routes.ini
+++ b/System/Application/Config/Routes.ini
@@ -8,6 +8,12 @@ uri = /about
 controller = index
 action = about
 
+[admin]
+uri = /admin
+package = solidcms
+controller = admin
+action = index
+
 [solidcms]
 uri = /*
 package = solidcms
