Added support for advanced routes and default values for segments.

--- a/System/Application/Config/Routes.ini
+++ b/System/Application/Config/Routes.ini
@@ -14,6 +14,13 @@ package = solidcms
 controller = admin
 action = index
 
+[admin_item]
+uri = /admin/:item/:action
+package = solidcms
+controller = admin
+action = item
+default.action = index
+
 [solidcms]
 uri = /*
 package = solidcms
