Added Solidocs_Theme::body_class(). Added Solidocs_Session::destroy(). Added Solidcms_Controller_Admin::do_login() and do_logout(). Added Solidocs_Helper_Form::button(). Added Solidcms_View_Login. Added a login and logout route. Solidocs_Model_User::auth() now returns a boolean value.

--- a/System/Application/Config/Routes.ini
+++ b/System/Application/Config/Routes.ini
@@ -8,6 +8,18 @@ uri = /about
 controller = index
 action = about
 
+[login]
+uri = /login
+package = solidcms
+controller = admin
+action = login
+
+[logout]
+uri = /logout
+package = solidcms
+controller = admin
+action = logout
+
 [admin]
 uri = /admin
 package = solidcms
