Added Solidcms_Controller_Admin_Dashboard, Solidocs_View_Admin_Dashboard and Solidocs_Model_Admin. Admin dispatchal is now working, merged the two admin routes into one. Minor changes to the admin theme css.

--- a/System/Application/Config/Routes.ini
+++ b/System/Application/Config/Routes.ini
@@ -21,16 +21,11 @@ controller = admin
 action = logout
 
 [admin]
-uri = /admin
-package = solidcms
-controller = admin
-action = index
-
-[admin_item]
 uri = /admin/:item/:action
 package = solidcms
 controller = admin
-action = item
+action = index
+default.item = dashboard
 default.action = index
 
 [solidcms]
