You can now install and uninstall plugins, when installing/uninstalling the extended Solidocs_Plugin::install() and uninstall() methods will run (new). All include() are now include_once(). Added Solidcms_Model_Admin::get_plugins().

--- a/System/Packages/Solidcms/Package.ini
+++ b/System/Packages/Solidcms/Package.ini
@@ -1,4 +1,4 @@
 name = Solidcms
 version = 1.0
-website = http://solidocs.com
+url = http://solidocs.com
 description = The Solid<i>cms</i> package.
