Added a new package, Solidadmin and moved all the admin related files from Solidcms to this package. Removed the url and version paramters from Solidocs_Plugin, they are not fetched from the package's Package.ini.

--- a/System/Application/Config/Routes.ini
+++ b/System/Application/Config/Routes.ini
@@ -10,19 +10,19 @@ action = about
 
 [login]
 uri = /login
-package = solidcms
+package = solidadmin
 controller = admin
 action = login
 
 [logout]
 uri = /logout
-package = solidcms
+package = solidadmin
 controller = admin
 action = logout
 
 [admin]
 uri = /admin/:item/:action
-package = solidcms
+package = solidadmin
 controller = admin
 action = index
 default.item = dashboard
