--- a/System/Application/Config/Application.ini
+++ b/System/Application/Config/Application.ini
@@ -1,3 +1,3 @@
-[Hooks]
-post_setup[] = Solidocs_Plugin_Config
-render[] = Solidocs_Plugin_Debug::debug_bar
+[Plugins]
+autoload[] = Solidocs_Plugin_Db
+autoload[] = Solidocs_Plugin_Debug
