Routes are now case-sensitive.

--- a/System/Application/Config/Routes.ini
+++ b/System/Application/Config/Routes.ini
@@ -1,35 +1,35 @@
 [index]
 uri = /
-controller = index
+controller = Index
 action = index
 
 [about]
 uri = /about
-controller = index
+controller = Index
 action = about
 
 [login]
 uri = /login
-package = solidadmin
-controller = admin
+package = Solidadmin
+controller = Admin
 action = login
 
 [logout]
 uri = /logout
-package = solidadmin
-controller = admin
+package = Solidadmin
+controller = Admin
 action = logout
 
 [admin]
 uri = /admin/:item/:action
-package = solidadmin
-controller = admin
+package = Solidadmin
+controller = Admin
 action = index
 default.item = dashboard
 default.action = index
 
 [solidcms]
 uri = /*
-package = solidcms
-controller = content
+package = Solidcms
+controller = Content
 action = index
