Solidocs_Plugin_Db is now Solidcms_Plugin_Db and removed from Application.ini Plugins.autoload. Merged Solidadmin with Solidcms, there's no need of having two packages wich are so much related. Minor updates to the admin theme. Added Solidcms_Model_Admin::deactivate_plugin(), activate_plugin(), get_config_plugins(), get_activate_plugins(). Added Solidcms_Model_Install. Solidocs_Ar now have better support for primary columns which are strings and not integers. You can now pass false instead of config to Solidocs_Base to avoid running the init() method. Improved Solidcms plugin and package listing and you can now de/activate plugins.

--- a/System/Application/Config/Routes.ini
+++ b/System/Application/Config/Routes.ini
@@ -10,19 +10,19 @@ action = about
 
 [login]
 uri = /login
-package = Solidadmin
+package = Solidcms
 controller = Admin
 action = login
 
 [logout]
 uri = /logout
-package = Solidadmin
+package = Solidcms
 controller = Admin
 action = logout
 
 [admin]
 uri = /admin/:item/:action
-package = Solidadmin
+package = Solidcms
 controller = Admin
 action = index
 default.item = dashboard
