Added the new Site-section in the Application config. Added more tables to Solidcms_Model_Install. Removed the solidcms_ prefix from all Solidcms tables. You can now view Channels in the admin interface. Added Solidocs_Db::is_success().

--- a/System/Packages/Solidcms/Package.ini
+++ b/System/Packages/Solidcms/Package.ini
@@ -1,4 +1,4 @@
 name = Solidcms
 version = 1.0
 url = http://solidocs.com
-description = The Solid<i>cms</i> package.
+description = The Solid<i>cms</i>, a complete CMS and an admin interface for Solidocs.
