Added Solidcms_Controller_Admin_Channel, Solidcms_View_Channel_Edit. Minor changes to SOlidocs_Theme, Solidocs_Helper_Form, Solidcms_Controller_Admin_Content, Solidcms_Config_Install, the admin theme and the default routes configuration.

--- a/System/Application/Config/Routes.ini
+++ b/System/Application/Config/Routes.ini
@@ -21,12 +21,13 @@ controller = Admin
 action = logout
 
 [admin]
-uri = /admin/:item/:action
+uri = /admin/:item/:action/:id
 package = Solidcms
 controller = Admin
 action = index
 default.item = dashboard
 default.action = index
+default.id = 0
 
 [solidcms]
 uri = /*
