Cleaned up the default Application.ini. Removed the Libraries.ini config file, it's contents should now be merged with Application.ini. Application.php now supports loading different config files depending on the application enviroment like staging and development. Just append .staging or .enviroment to your Application file to use it during this specific development stage. Solidocs_Config now checks if a config file exists before loading it in init(). Minor changes to Solidocs_Functions and Solidocs_I18n.

--- a/System/Application/Config/Application.ini
+++ b/System/Application/Config/Application.ini
@@ -1,5 +1,8 @@
 [Site]
-name = Solidocs Development
+name = My Site
 
-[Plugins]
-autoload[] = Solidcms_Plugin_Db
+[Solidocs_Db]
+server = localhost
+user = ""
+password = ""
+database = ""
