Added Solidocs_Package. Added the Solidyn package which will contain an autoloading plugin for plugins, configuration and ACL. Added Solidocs_Navigation::get_menu() and get_breadcrumb(). Solidocs_Db::where() now calls _fields() for all field names in where(). Removed Hook autoloading in Solidocs_Application. Simplified library loading in Solidocs_Application, now fetches the Autoload.libraries configuration instead of loading an array. Added the default libraries to Application.ini. The default theme header now utilizes the Solidocs_Navigation library for rendering the menu.

--- a/System/Application/Config/Application.ini
+++ b/System/Application/Config/Application.ini
@@ -1,6 +1,17 @@
 [Site]
 name = My Site
 
+[Autoload]
+libraries[] = Router
+libraries[] = Session
+libraries[] = Input
+libraries[] = I18n
+libraries[] = Output
+libraries[] = Theme
+libraries[] = Acl
+libraries[] = User
+libraries[] = Navigation
+
 [Solidocs_Db]
 server = localhost
 user = ""
