Added Solidnode_View_Content_Page. Moved the old Solidcms_Plugin_Db methods to Solidyn_Plugin_Autoload. Completely removed the Solidcms package. Library configuration does not need the package prefix now, [Solidocs_Db] section is now [Db] etc. Solidocs_Load::$searchable is now $packages. Added autoloading for the bundled packages to Application.ini. Solidocs_Application can now load plugins, fixed a minor bug.

--- a/System/Application/Config/Application.ini
+++ b/System/Application/Config/Application.ini
@@ -13,7 +13,14 @@ libraries[] = Acl
 libraries[] = User
 libraries[] = Navigation
 
-[Solidocs_Db]
+plugins[] = Solidyn_Plugin_Autoload
+
+[Load]
+packages[] = Solidadmin
+packages[] = Solidnode
+packages[] = Solidyn
+
+[Db]
 server = localhost
 user = ""
 password = ""
