Added Solidocs_Text, a library which handles strings and text.

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,5 @@
 System/Cache/*
 System/Application/Config/Application.development.ini
 System/Application/Config/Routes.development.ini
+System/Application/Controller/Test.php
+System/Application/View/Test.php
