Solidocs_Db is now more portable. Renmed the following packages: Soliadmin -> Admin, Solidyn -> Dynamic and Solidnode -> Node. Updated Package.ini's and default Application.ini.

--- a/System/Application/Config/Application.ini
+++ b/System/Application/Config/Application.ini
@@ -13,12 +13,12 @@ libraries[] = Acl
 libraries[] = User
 libraries[] = Navigation
 
-plugins[] = Solidyn_Plugin_Autoload
+plugins[] = Dynamic_Plugin_Autoload
 
 [Load]
-packages[] = Solidadmin
-packages[] = Solidnode
-packages[] = Solidyn
+packages[] = Admin
+packages[] = Node
+packages[] = Dynamic
 
 [Db]
 server = localhost
