Plugins and now declared in Package.ini. Added PHPDoc comments for all packages.

--- a/System/Packages/Dynamic/Package.ini
+++ b/System/Packages/Dynamic/Package.ini
@@ -1,4 +1,9 @@
+[Package]
 name = Dynamic
 version = 1.0
 url = http://solidocs.com
-description = Adds support for dynamic loading of config, ACL and plugins.
+description = Enables support for dynamic loading of config, ACL and plugins from the database.
+
+[Plugin]
+Autoload.name = Autoload
+Autoload.description = Autoloads plugins, config and ACL from the database.
