--- a/System/Packages/Solidocs/Package.ini
+++ b/System/Packages/Solidocs/Package.ini
@@ -1,4 +1,9 @@
+[Package]
 name = Solidocs
 version = 1.0
 url = http://solidocs.com
 description = The Solidocs framework.
+
+[Plugin]
+Debug.name = Debug Bar
+Debug.description = A plugin which displays a bar a the bottom of every page allowing you to view data about the page request.
