Added config to Dynamic_Plugin_Autoload, load_config, load_plugins and load_acl. You can now set config in your Application.ini for plugins. Added the CLEditor package to the default Application.ini. Minor changes to Solidocs_Helper_Form.

--- a/System/Application/Config/Application.ini
+++ b/System/Application/Config/Application.ini
@@ -13,15 +13,19 @@ libraries[] = Acl
 libraries[] = User
 libraries[] = Navigation
 
-plugins[] = Dynamic_Plugin_Autoload
+plugins[] = Plugin_Autoload
 
 [Load]
 packages[] = Admin
 packages[] = Node
 packages[] = Dynamic
+packages[] = CLEditor
 
 [Db]
 server = localhost
 user = ""
 password = ""
 database = ""
+
+[Plugin_Autoload]
+load_config = false
