When you load a plugin the full plugin class name should be specified, changed this in the default config.

--- a/System/Application/Config/Application.ini
+++ b/System/Application/Config/Application.ini
@@ -13,7 +13,7 @@ libraries[] = Acl
 libraries[] = User
 libraries[] = Navigation
 
-plugins[] = Plugin_Autoload
+plugins[] = Dynamic_Plugin_Autoload
 
 [Load]
 packages[] = Admin
