Fixed a major bug in the Solidocs_Session __destroy() method. Added some commenting to Solidocs_Application. Minor changes to Solidocs_Helper_Form, the Application.ini and Solidocs_Input. Sessions doesn't transform everything into an object now but uses arrays instead, added support for this in the default user model. Added Solidocs_Output::init() and add_flash_message(). You can now add messages that will be displayed in the following page rendering instead of the current.

--- a/System/Application/Config/Application.ini
+++ b/System/Application/Config/Application.ini
@@ -18,6 +18,7 @@ plugins[] = Dynamic_Plugin_Autoload
 [Load]
 packages[] = Admin
 packages[] = Node
+packages[] = Media
 packages[] = Dynamic
 packages[] = CLEditor
 
@@ -26,6 +27,3 @@ server = localhost
 user = ""
 password = ""
 database = ""
-
-[Plugin_Autoload]
-load_config = false
