Rewrote Solidocs_Theme::title(). Added title configuration to the default Application.ini. Both the admin and the default themes now use the complete head() method. Minor changes to Media_View_Admin_Media_List, Media_Controller_Admin_Media and Admin_Controller_Admin.

--- a/System/Application/Config/Application.ini
+++ b/System/Application/Config/Application.ini
@@ -2,6 +2,11 @@
 name = My Site
 url = http://localhost
 
+[Theme]
+title_base = Solidocs
+title_separator = " | "
+title_default = PHP Framework
+
 [Autoload]
 libraries[] = Router
 libraries[] = Session
