--- a/System/Application/Config/Application.ini
+++ b/System/Application/Config/Application.ini
@@ -18,7 +18,7 @@ libraries[] = Acl
 libraries[] = User
 libraries[] = Navigation
 
-plugins[] = Dynamic_Plugin_Autoload
+;plugins[] = Dynamic_Plugin_Autoload
 
 [Load]
 packages[] = Admin
