Minor change to the debug() function. Added the default layout and improved the default theme so it works correctly with regions. Added Solidocs_Widget and Solidocs_Widget_Text. Minor changes to Solidocs_Theme.

--- a/System/Media/Theme/Default/theme.ini
+++ b/System/Media/Theme/Default/theme.ini
@@ -2,7 +2,7 @@ name = Default Theme
 description = The default theme in Solidocs
 version = 1.0
 
-regions.left = Left Sidebar
+regions.left_sidebar = Left Sidebar
 regions.content = Content
 
 layouts.default.name = Default
