Added Node_Plugin_Region which is a plugin for dynamicly populating regions. Added some new hooks to Solidocs_Theme. Node_Controller_Node::do_index() now sets the layout for the node. Solidocs_Plugin_Debug has been updated to work with the APIs that are now available. Solidocs_Application::setup_database() now sets the names for the db (utf8).

--- a/System/Media/Theme/Default/theme.ini
+++ b/System/Media/Theme/Default/theme.ini
@@ -9,5 +9,5 @@ layouts.default.name = Default
 layouts.default.regions[] = content
 
 layouts.column.name = 2 columns
-layouts.column.regions[] = left
+layouts.column.regions[] = left_sidebar
 layouts.column.regions[] = content
