--- a/System/Packages/Node/Package.ini
+++ b/System/Packages/Node/Package.ini
@@ -3,3 +3,7 @@ name = Node
 version = 1.0
 url = http://solidocs.com
 description = The node.table, Node model and the Node controller.
+
+[Plugin]
+Region.name = Dynamic Region
+Region.description = Adds support for dynamic populated regions.
