Added CKEditor_Model_Package, you can now install and uninstall CKEditor. Added CKEditor to the default Application.ini packages. Added Admin_Model_Theme::install_widget() and uninstall_widget().

--- a/System/Application/Config/Application.ini
+++ b/System/Application/Config/Application.ini
@@ -25,6 +25,7 @@ packages[] = Node
 packages[] = Media
 packages[] = Dynamic
 packages[] = CLEditor
+packages[] = CKEditor
 
 [Db]
 server = localhost
